--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
         <script type="module" src="/src/api/"></script>
-        <title>React App</title>
+        <title>Pokedéx</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
